chore(deprecated): fixed deprecated api