@@ -1,22 +1,8 @@
-/*******************************************************************************
- * Copyright 2020 SAP
- * 
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not
- * use this file except in compliance with the License.  You may obtain a copy
- * of the License at
- * 
- *   http://www.apache.org/licenses/LICENSE-2.0
- * 
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
- * License for the specific language governing permissions and limitations under
- * the License.
- ******************************************************************************/
 package com.hybris.yps.hyeclipse.handlers.help;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import org.eclipse.core.commands.AbstractHandler;
 import org.eclipse.core.commands.ExecutionEvent;
@@ -32,9 +18,11 @@ public abstract class AbstractOpenInExternalBrowserHandler extends AbstractHandl
 	public Object execute(ExecutionEvent arg0) throws ExecutionException {
 		try {
 			String url = getURL();
-			PlatformUI.getWorkbench().getBrowserSupport().getExternalBrowser().openURL(new URL(url));
-		} catch (PartInitException | MalformedURLException e) {
-			Activator.logError("Could not open link ", e);
+			PlatformUI.getWorkbench().getBrowserSupport().getExternalBrowser().openURL(new URI(url).toURL());
+		} catch (PartInitException | MalformedURLException | URISyntaxException e) {
+			String errMsg = String.format("Could not open link: %s ", getURL());
+			Activator.logError(errMsg, e);
+			throw new ExecutionException(errMsg, e);
 		}
 		return null;
 	}
